--- a/articles.css
+++ b/articles.css
@@ -122,7 +122,7 @@ body{
   align-items: center;
   max-width: 380px;
   width: 100%;
-  margin: auto;
+  text-align: center;
 }
 .items a{
   text-decoration: none;
